--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -10,7 +10,7 @@
         WindowStartupLocation="CenterScreen">
 
     <Window.Resources>
-
+        <DropShadowEffect x:Key="glowEffect" BlurRadius="30" Opacity="1" ShadowDepth="0" Color="Red"></DropShadowEffect>
     </Window.Resources>
 
     <Grid x:Name="MainGrid" >
@@ -33,10 +33,13 @@
                 <ColumnDefinition Width="42"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-
-            <Button Style="{DynamicResource AuxiliaryButton}" Grid.Column="1"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"/>
+            <TextBox Grid.Column="1"
+                     BorderBrush="Red"
+                     Panel.ZIndex="1"
+                     Height="40"
+                     Width="70"
+                     Effect="{StaticResource glowEffect}">
+            </TextBox>
         </Grid>
     </Grid>
 </Window>
