Big rework. Created custom window, restructed Side Menu, deleted not used files. 3-4 days hard working and learning for me.

--- a/Styles/ButtonStyles.xaml
+++ b/Styles/ButtonStyles.xaml
@@ -88,4 +88,10 @@
             <Setter Property="VerticalAlignment" Value="Center"/>
         </Style.Setters>
     </Style>
+
+    <RotateTransform x:Key="UpTriangle" CenterX="15" CenterY="12.5" Angle="0"/>
+    <RotateTransform x:Key="RightTriangle" CenterX="15" CenterY="12.5" Angle="90"/>
+    <RotateTransform x:Key="DownTriangle" CenterX="15" CenterY="12.5" Angle="180"/>
+    <RotateTransform x:Key="LeftTriangle" CenterX="15" CenterY="12.5" Angle="270"/>
+    
 </ResourceDictionary>
