--- a/Controls/SideMenuControl.xaml
+++ b/Controls/SideMenuControl.xaml
@@ -4,7 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Niero.Controls"
-             mc:Ignorable="d">
+             mc:Ignorable="d"
+             d:DesignHeight="800" d:DesignWidth="200">
 
     <UserControl.Template>
         <ControlTemplate TargetType="UserControl">
@@ -13,14 +14,11 @@
                     Background="{TemplateBinding Background}" 
                     BorderBrush="{TemplateBinding BorderBrush}"
                     BorderThickness="{TemplateBinding BorderThickness}"
-                    Width="200" 
-                    HorizontalAlignment="Left" 
-                    Margin="-160,0,0,0"
                     Opacity="1">
                 <!-- Main Grid -->
-                <Grid x:Name="MainGrid">
+                <Grid x:Name="MainGrid" HorizontalAlignment="Right">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="159"/>
                         <ColumnDefinition Width="1"/>
                         <ColumnDefinition Width="40"/>
                     </Grid.ColumnDefinitions>
@@ -203,8 +201,11 @@
     <UserControl.Style>
         <Style TargetType="UserControl">
             <Style.Setters>
-                <Setter Property="Background" Value="{StaticResource DarkWhiteBrush}"/>
-                <Setter Property="BorderBrush" Value="{StaticResource DarkWhiteBrush}"/>
+                <Setter Property="Background" Value="Transparent"/>
+                <Setter Property="BorderBrush" Value="Transparent"/>
+                <Setter Property="BorderThickness" Value="0"/>
+                <Setter Property="Width" Value="40"/>
+                <Setter Property="HorizontalAlignment" Value="Left"/>
                 <Setter Property="BorderThickness" Value="1"/>
                 <Setter Property="IsHitTestVisible" Value="True"/>
             </Style.Setters>
