--- a/Styles/TextBlockStyles.xaml
+++ b/Styles/TextBlockStyles.xaml
@@ -5,7 +5,7 @@
         <Style.Setters>
             <Setter Property="FontFamily" Value="{DynamicResource Magic}"/>
             <Setter Property="FontSize" Value="16"/>
-            <Setter Property="Foreground" Value="{DynamicResource BaseBrush}"/> 
+            <Setter Property="Foreground" Value="{StaticResource OverflowBrush}"/> 
             <Setter Property="HorizontalAlignment" Value="Center"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
         </Style.Setters>
